Fixed up spacing on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -83,21 +83,24 @@ img {
     display: block;
   }
   padding: 50px 35px;
+  @include mobile {
+    padding: 15px;
+  }
   &__title {
     flex-shrink: 0;
     width: 200px;
-    margin-right: 70px;
+    margin-right: 50px;
     color: var(--color-accent);
     text-transform: uppercase;
     text-align: right;
     font-weight: $font-weight-bold;
     letter-spacing: 2px;
-    @include desktop {
-      margin-right: 50px;
-    }
     @include tablet {
       text-align: left;
       width: auto;
+    }
+    @include mobile {
+      margin-right: 0px;
     }
   }
   &__content {
@@ -108,6 +111,10 @@ img {
     @include tablet {
       padding-top: 30px;
       padding-left: 25px;
+    }
+    @include mobile {
+      padding-left: 10px;
+      padding-top: 10px;
     }
     p {
       margin-top: 0;
